; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_gui_photon.c_gui_ph_handle_timer_cursor.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_gui_photon.c_gui_ph_handle_timer_cursor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@blink_state = common dso_local global i64 0, align 8
@BLINK_ON = common dso_local global i64 0, align 8
@BLINK_OFF = common dso_local global i64 0, align 8
@gui_ph_timer_cursor = common dso_local global i32 0, align 4
@Pt_ARG_TIMER_INITIAL = common dso_local global i32 0, align 4
@blink_offtime = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@blink_ontime = common dso_local global i32 0, align 4
@Pt_CONTINUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32*)* @gui_ph_handle_timer_cursor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gui_ph_handle_timer_cursor(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i64, i64* @blink_state, align 8
  %8 = load i64, i64* @BLINK_ON, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %17

10:                                               ; preds = %3
  %11 = call i32 (...) @gui_undraw_cursor()
  %12 = load i64, i64* @BLINK_OFF, align 8
  store i64 %12, i64* @blink_state, align 8
  %13 = load i32, i32* @gui_ph_timer_cursor, align 4
  %14 = load i32, i32* @Pt_ARG_TIMER_INITIAL, align 4
  %15 = load i32, i32* @blink_offtime, align 4
  %16 = call i32 @PtSetResource(i32 %13, i32 %14, i32 %15, i32 0)
  br label %26

17:                                               ; preds = %3
  %18 = load i32, i32* @TRUE, align 4
  %19 = load i32, i32* @FALSE, align 4
  %20 = call i32 @gui_update_cursor(i32 %18, i32 %19)
  %21 = load i64, i64* @BLINK_ON, align 8
  store i64 %21, i64* @blink_state, align 8
  %22 = load i32, i32* @gui_ph_timer_cursor, align 4
  %23 = load i32, i32* @Pt_ARG_TIMER_INITIAL, align 4
  %24 = load i32, i32* @blink_ontime, align 4
  %25 = call i32 @PtSetResource(i32 %22, i32 %23, i32 %24, i32 0)
  br label %26

26:                                               ; preds = %17, %10
  %27 = load i32, i32* @Pt_CONTINUE, align 4
  ret i32 %27
}

declare dso_local i32 @gui_undraw_cursor(...) #1

declare dso_local i32 @PtSetResource(i32, i32, i32, i32) #1

declare dso_local i32 @gui_update_cursor(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
